--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,12 @@
         "__threading_support": "cpp",
         "print": "cpp",
         "any": "cpp",
-        "condition_variable": "cpp"
+        "condition_variable": "cpp",
+        "__hash_table": "cpp",
+        "__tree": "cpp",
+        "deque": "cpp",
+        "list": "cpp",
+        "queue": "cpp",
+        "stack": "cpp"
     }
 }
